[gd_scene load_steps=4 format=3 uid="uid://bqx8v7k2n8x1y"]

[ext_resource type="Script" path="res://src/scripts/ui/MainMenuUI.gd" id="1_8x9k2"]
[ext_resource type="Theme" path="res://src/ui/themes/MenuTheme.tres" id="2_3h4j5"]
[ext_resource type="PackedScene" path="res://src/scenes/ui/AnimatedBackground.tscn" id="3_6k7l8"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2_3h4j5")
script = ExtResource("1_8x9k2")

[node name="AnimatedBackground" parent="." instance=ExtResource("3_6k7l8")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="TitleContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TitleLabel" type="Label" parent="MainContainer/TitleContainer"]
layout_mode = 2
text = "AWESOME
GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)

[node name="ButtonContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PlayButton" type="Button" parent="MainContainer/ButtonContainer"]
layout_mode = 2
text = "PLAY"
flat = true

[node name="OptionsButton" type="Button" parent="MainContainer/ButtonContainer"]
layout_mode = 2
text = "OPTIONS"
flat = true

[node name="CreditsButton" type="Button" parent="MainContainer/ButtonContainer"]
layout_mode = 2
text = "CREDITS"
flat = true

[node name="RightIcons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -100.0
offset_right = -20.0
offset_bottom = 100.0

[node name="ShopIcon" type="Button" parent="RightIcons"]
layout_mode = 2
text = "üõí"
flat = true

[node name="TrophyIcon" type="Button" parent="RightIcons"]
layout_mode = 2
text = "üèÜ"
flat = true

[node name="SettingsIcon" type="Button" parent="RightIcons"]
layout_mode = 2
text = "‚öôÔ∏è"
flat = true

[node name="CopyrightLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.0
anchor_right = 0.0
offset_left = 20.0
offset_top = -30.0
offset_right = 300.0
offset_bottom = -10.0
text = "PLACE COPYRIGHT TEXT HERE"
horizontal_alignment = 0
